crates/ir/tests/ir/snapshots/main__ir__lower__shape_impl__shape_impl_mono_owned.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module shape_impl__shape_impl_mono_owned

type Handle = MkHandle#0
trait Identity[h11] { identify(h11): h11 }
instance core/disposable.Disposable[Handle] { dispose=Disposable$$Handle$$dispose }
instance shape_impl__shape_impl_mono_owned.Identity[Vec$Handle] { identify=Identity$$Vec$Handle$$identify }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]

fn Disposable$$Handle$$dispose(v0: ~Handle) -> Unit =
  switch v0 {
    0 ->
      ()
  }

fn Identity$$Vec$Handle$$identify(v1: ~Vec[~Handle]) -> ~Vec[~Handle] =
  v1
