crates/ir/tests/ir/snapshots/main__ir__lower__shape_impl__shape_impl_mono_plain.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module shape_impl__shape_impl_mono_plain

trait Combiner[a9] { combine(a9, a9): a9 }
instance shape_impl__shape_impl_mono_plain.Combiner[Int] { combine=Combiner$$Int$$combine }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn Combiner$$Int$$combine(v0: Int, v1: Int) -> Int =
  let v2: Int = add_int(v0, v1)
  v2
