crates/ir/tests/ir/snapshots/main__ir__lower__shape_impl__shape_impl_three_params.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module shape_impl__shape_impl_three_params

trait Zip3[n11] { pick_first(n11, o11, p11): n11 }
instance shape_impl__shape_impl_three_params.Zip3[$Var0$$$Var0$$$Var0] { pick_first=Zip3$$$Var0$$$Var0$$$Var0$$pick_first }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn Zip3$$$Var0$$$Var0$$$Var0$$pick_first(v0: t11, v1: u11, v2: v11) -> t11 =
  v0
